--- a/StopWatch/style.css
+++ b/StopWatch/style.css
@@ -3,9 +3,9 @@ body {
   
     font-family: sans-serif;
     display: grid ;
-    height: 100%;
+    height: 100%; 
   }
-  
+  /*  */
   .wrapper {
     width: 400px;
   
